--- a/LGCsocials.html
+++ b/LGCsocials.html
@@ -139,7 +139,7 @@
         //if you want the URL to open in the same window use '_parent'  instead of '_blank'
 
         if (id === "email")
-          window.open("mailto:withkimsh@gmail.com", '_parent').focus(); //Add the url to your blog
+          window.open("mailto:withkimsh@gmail.com", '_parent').focus(); //Add your email after 'mailto:'
 
 
         else if (id === "facebook") {
