--- a/LGCnavtop.html
+++ b/LGCnavtop.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #ffffff;
+			color: #4688cf;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -57,7 +57,7 @@
 
 <body>
 
-	<nav class="navMenu  border background">
+	<nav class="navMenu  border">
 		<a id="교회 소개" onclick="navigate(this.id)" href="#"> </i> 교회 소개</a>
 		<a id="칼럼" onclick="navigate(this.id)" href="#"> </i> 칼럼</a>
 		<a id="DRAFT1" onclick="navigate(this.id)" href="#"> </i> DRAFT1</a>
