--- a/LGCnavtop.html
+++ b/LGCnavtop.html
@@ -40,11 +40,11 @@
 		}
 
 		.background {
-			background-color: #4688cf;
+			background-color: #ece5f0;
 		}
 
 		.border {
-			border: 1px solid #4688cf;
+			border: 1px solid #cccccc;
 
 		}
 
