--- a/LGCnavside.html
+++ b/LGCnavside.html
@@ -58,18 +58,13 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
-		<a id="inbox" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-inbox"></i> Inbox</a>
-		<a id="week" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-calendar-week"></i> Planner</a>
-		<a id="projects" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-briefcase"></i> Projects</a>
-		<a id="tasks" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-list-check"></i> Tasks</a>
-		<a id="business" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-money-bill-wave"></i> Business</a>
-		<a id="knowledge" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-lightbulb"></i> Knowledge</a>
-		<a id="topics" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-layer-group"></i> Topics</a>
-		<a id="notes" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-book"></i> Notes</a>
-		<a id="media" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-bookmark"></i> Media</a>
-		<a id="resourses" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-wrench"></i> Resourses</a>
-		<a id="lifewiki" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-heart"></i> Lifewiki</a>
+		<a id="교회 소개" onclick="navigate(this.id)" href="#"> </i> 교회 소개</a>
+		<a id="칼럼" onclick="navigate(this.id)" href="#"> </i> 칼럼</a>
+		<a id="DRAFT1" onclick="navigate(this.id)" href="#"> </i> DRAFT1</a>
+		<a id="DRAFT2" onclick="navigate(this.id)" href="#"> </i> DRAFT2</a>
+		<a id="DRAFT3" onclick="navigate(this.id)" href="#"> </i> DRAFT3</a>
+		<a id="DRAFT4" onclick="navigate(this.id)" href="#"> </i> DRAFT4</a>
+		<a id="DRAFT5" onclick="navigate(this.id)" href="#"> </i> DRAFT5</a>
 
 
 
