--- a/LGCnavside.html
+++ b/LGCnavside.html
@@ -24,7 +24,7 @@
 
 
 		.navMenu {
-			font-family: 'Advent Pro', sans-serif;
+			font-family: 'Nanum Myeongjo', serif;
 			padding: 8px;
 			text-align: center;
 			margin: 7px auto;
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #4688cf;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -44,13 +44,13 @@
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: px solid #cccccc;
 
 		}
 
 		.navMenu a:hover {
 
-			color: #d09c0b;
+			color: #c2dfff;
 		}
 	</style>
 </head>
