--- a/LGCsocials.html
+++ b/LGCsocials.html
@@ -139,14 +139,14 @@
         //if you want the URL to open in the same window use '_parent'  instead of '_blank'
 
         if (id === "email")
-          window.open("mailto:withkimsh@gmail.com", '_parent').focus(); //Add your email after 'mailto:'
+          window.open("mailto:withkimsh@gmail.com", '_blank').focus(); //Add your email after 'mailto:'
 
 
         else if (id === "facebook") {
-          window.open("https://www.facebook.com/londongracechapel", '_parent').focus(); //Add the url to your facebook page or account
+          window.open("https://www.facebook.com/londongracechapel", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("https://www.instagram.com/london_grace_chapel/?utm_source=qr&igsh=dmUzdHAybm9pZmY1", '_parent').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/london_grace_chapel/?utm_source=qr&igsh=dmUzdHAybm9pZmY1", '_blank').focus(); //Add the url to your instagram account
         }
       }
 
